--- a/Klike/Sources/Controllers/Event/KLEventRatingPageCell.xib
+++ b/Klike/Sources/Controllers/Event/KLEventRatingPageCell.xib
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D131" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="7702" systemVersion="14D136" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="7701"/>
     </dependencies>
@@ -326,7 +326,7 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstAttribute="height" constant="100" id="0bP-8i-RH1"/>
+                            <constraint firstAttribute="height" priority="999" constant="100" id="0bP-8i-RH1"/>
                             <constraint firstAttribute="width" secondItem="3jn-bf-qn2" secondAttribute="width" id="2GX-gw-170"/>
                             <constraint firstAttribute="trailing" secondItem="UaQ-gc-8Ah" secondAttribute="trailing" id="5ls-DJ-o1u"/>
                             <constraint firstItem="UaQ-gc-8Ah" firstAttribute="top" secondItem="ya5-DT-p8J" secondAttribute="top" constant="18" id="JbC-WU-wmU"/>
